chore: replace TOOL_NAME with CRUISE everywhere

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
   - name: CCBR Discussions
-    url: https://github.com/CCBR/CCBR_NextflowTemplate/discussions # TODO replace CCBR_NextflowTemplate in this link with TOOL_NAME
+    url: https://github.com/CCBR/CRUISE/discussions
     about: Please ask and answer questions here.
