--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 # Project Information
-site_name: TOOL_NAME
+site_name: CRUISE
 site_author: CCR Collaborative Bioinformatics Resource
 site_description: >-
-  insert a one-line description of TOOL_NAME here
+  insert a one-line description of CRUISE here
 # Repository
-repo_name: CCBR/TOOL_NAME
-repo_url: https://github.com/CCBR/TOOL_NAME
-edit_uri: https://github.com/CCBR/TOOL_NAME/edit/main/docs/
+repo_name: CCBR/CRUISE
+repo_url: https://github.com/CCBR/CRUISE
+edit_uri: https://github.com/CCBR/CRUISE/edit/main/docs/
 
 # Copyright
 copyright: Copyright &copy; 2023 CCR Collaborative Bioinformatics Resource
@@ -91,7 +91,7 @@ markdown_extensions:
 
 # Page Tree
 nav:
-  - Background: index.md
+  - Introduction: index.md
   - Usage:
       - 1. Getting Started: user-guide/getting-started.md
       - 2. Preparing Files: user-guide/preparing-files.md
