--- a/nextflow.config
+++ b/nextflow.config
@@ -29,9 +29,9 @@ process {
 }
 
 manifest {
-    name = "CCBR/TOOL_NAME"
+    name = "CCBR/CRUISE"
     author = "CCR Collaborative Bioinformatics Resource"
-    homePage = "https://github.com/CCBR/TOOL_NAME"
-    description = "one-line description of TOOL_NAME goes here"
+    homePage = "https://github.com/CCBR/CRUISE"
+    description = "one-line description of CRUISE goes here"
     mainScript = "main.nf"
 }
