feat: create modules.conf

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,9 @@
 nextflow.enable.dsl = 2
 
+params {
+    input = null
+}
+
 def timestamp = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
 dag {
     enabled = true
@@ -24,9 +28,7 @@ profiles {
     }
 }
 
-process {
-    cpus = 2
-}
+includeConfig 'conf/modules.conf'
 
 manifest {
     name = "CCBR/CRUISE"
