--- a/docker/drugz/meta.yml
+++ b/docker/drugz/meta.yml
@@ -1,4 +1,4 @@
-dockerhub_namespace: kellysovacool
-image_name: drugz
-version: test
+dockerhub_namespace: nciccbr
+image_name: cruise_drugz
+version: 0.1.0
 container: "$(dockerhub_namespace)/$(image_name):$(version)"
