refactor: config structure from champagne

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -2,21 +2,36 @@
 process {
 
     publishDir = [
-        path: { task.label ? "${params.outdir}/${task.label.join('/')}/${task.process.tokenize(':')[-1].toLowerCase()}" : "${params.outdir}/${task.process.tokenize(':')[-1].toLowerCase()}" },
+        path: { task.label ? "${params.outdir}/${task.label.findAll { !it.startsWith('process_') }.join('/')}/${task.process.tokenize(':')[-1].toLowerCase()}" : "${params.outdir}/${task.process.tokenize(':')[-1].toLowerCase()}" },
         mode: params.publish_dir_mode,
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
-    memory = { check_max( 7.GB * task.attempt, 'memory' ) }
-    time   = { check_max( 4.h  * task.attempt, 'time'   ) }
     errorStrategy = 'finish'
 
+    /*
+    withName: 'INPUT_CHECK:SAMPLESHEET_CHECK' {
+        publishDir = [
+            path: { "${params.outdir}/pipeline_info" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+    */
+}
+
+// Docker/Singularity containers
+// Do not specify cpus, memory, time here -- use process labels in base.config
+process {
+
     // catch any process without a container.
-    // this must be first in the list of withName/withLabel selectors for containers.
+    // this must be first before any custom process containers
     withName: ".*" {
         container = 'nciccbr/ccbr_ubuntu_base_20.04:latest'
     }
+
+    // custom process containers
+
     withName: 'MAGECK.*' {
         container = 'quay.io/biocontainers/mageck:0.5.9.5--py39h1f90b4d_3'
     }
