--- a/nextflow.config
+++ b/nextflow.config
@@ -3,16 +3,13 @@ nextflow.enable.dsl = 2
 params {
     input = null
     outdir = 'results'
+    genome = null
+    enable_conda = false
+    publish_dir_mode = "copy"
 
-    publish_dir_mode = 'symlink'
 }
 
-def timestamp = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
-dag {
-    enabled = true
-    overwrite = true
-    file = "assets/dag.png"
-}
+includeConfig 'conf/base.config'
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
@@ -27,16 +24,18 @@ profiles {
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
-        singularity.cacheDir = "/data/$USER/.singularity"
+        singularity.cacheDir = "/data/$USER/.singularity" // TODO this may be a different default on other (non biowulf) platforms
+        envWhitelist='https_proxy,http_proxy,ftp_proxy,DISPLAY,SLURM_JOBID,SINGULARITY_BINDPATH'
     }
-}
-
-manifest {
-    name = "CCBR/CRUISE"
-    author = "CCR Collaborative Bioinformatics Resource"
-    homePage = "https://github.com/CCBR/CRUISE"
-    description = "one-line description of CRUISE goes here"
-    mainScript = "main.nf"
+    biowulf {
+        includeConfig "conf/biowulf.config"
+    }
+    slurmint {
+        includeConfig "conf/slurmint.config"
+    }
+    ci_stub {
+        includeConfig "conf/ci_stub.config"
+    }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
@@ -65,10 +64,10 @@ report {
 includeConfig 'conf/modules.config'
 
 manifest {
-    name = "CCBR/CHAMPAGNE"
+    name = "CCBR/CRUISE"
     author = "CCR Collaborative Bioinformatics Resource"
-    homePage = "https://github.com/CCBR/CHAMPAGNE"
-    description = "CHromAtin iMmuno PrecipitAtion sequencinG aNalysis pipEline"
+    homePage = "https://github.com/CCBR/CRUISE"
+    description = "Crispr scReen seqUencIng analySis pipEline"
     mainScript = "main.nf"
 }
 
