ci: use tag for auto-add-user-project

--- a/.github/workflows/projects.yml
+++ b/.github/workflows/projects.yml
@@ -10,5 +10,5 @@ on:
 
 jobs:
   add-to-project:
-    uses: CCBR/.github/.github/workflows/auto-add-user-project.yml@main
+    uses: CCBR/.github/.github/workflows/auto-add-user-project.yml@v0.1.0
     secrets: inherit
