feat: input check for samplesheet

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -25,13 +25,19 @@ process {
 process {
 
     // catch any process without a container.
-    // this must be first before any custom process containers
-    withName: ".*" {
+    // this must be first before any other withName selectors.
+    // oddly, it will override any withLabel selectors even though
+    // label should have a higher priority than name.
+    // https://www.nextflow.io/docs/latest/config.html#selector-priority
+    withName: '.*' {
         container = 'nciccbr/ccbr_ubuntu_base_20.04:latest'
     }
 
     // custom process containers
 
+    withName: 'TRIM.*' {
+        container = 'nciccbr/ncigb_cutadapt_v1.18:latest'
+    }
     withName: 'MAGECK.*' {
         container = 'quay.io/biocontainers/mageck:0.5.9.5--py39h1f90b4d_3'
     }
