--- a/nextflow.config
+++ b/nextflow.config
@@ -4,8 +4,17 @@ params {
     input = null
     outdir = 'results'
     genome = null
+    seq_center = null
+
     enable_conda = false
     publish_dir_mode = "copy"
+
+    cutadapt {
+        adapters = '/opt2/TruSeq_and_nextera_adapters.consolidated.fa'  // this is in the cutadapt container
+        minlen = 20
+        leadingquality = 10
+        trailingquality = 10
+    }
 
 }
 
@@ -35,6 +44,9 @@ profiles {
     }
     ci_stub {
         includeConfig "conf/ci_stub.config"
+    }
+    test {
+        includeConfig "conf/test.config"
     }
 }
 
