--- a/conf/ci_stub.config
+++ b/conf/ci_stub.config
@@ -3,7 +3,7 @@ params {
     config_profile_description = 'Minimal test dataset with blank references to run stubs with continuous integration'
 
     outdir = 'results/test'
-    input = 'assets/samplesheet_test.csv' // adapted from https://github.com/nf-core/test-datasets/blob/chipseq/samplesheet/v2.0/samplesheet_test.csv
+    input = 'tests/assets/samplesheet.csv' // adapted from https://github.com/nf-core/test-datasets/blob/chipseq/samplesheet/v2.0/samplesheet_test.csv
     genome = 'test'
 
     max_cpus = 2        // for GitHub Actions https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
