--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,10 @@
 default_install_hook_types: [pre-commit, commit-msg]
 default_stages: [pre-commit]
-exclude: ^assets/
+exclude: |
+  (?x)(
+      ^assets/|
+      ^docs/.*.html
+   )
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v1.2.3
