--- a/conf/test.config
+++ b/conf/test.config
@@ -3,6 +3,7 @@ params {
     config_profile_description = 'Minimal test dataset for pipeline functionality'
 
     input = 'assets/samplesheet_test.csv'
+    library = 'assets/lib/yusa_library.csv'
     outdir = 'results/test'
     genome = null
 
