--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,7 @@ nextflow.enable.dsl = 2
 
 params {
     input = null
+    library = null
     outdir = 'results'
     genome = null
     seq_center = null
