feat: mageck count, test, & mle processes

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,8 +4,11 @@ params {
     input = null
     library = null
     outdir = 'results'
+    exp_name = 'cruise'
     genome = null
-    seq_center = null
+
+    count_table   = null
+    design_matrix = null
 
     enable_conda = false
     publish_dir_mode = "copy"
