--- a/conf/test.config
+++ b/conf/test.config
@@ -11,6 +11,10 @@ params {
     max_time   = '12.h'
 
     publish_dir_mode = 'symlink'
+
+    drugz.remove_genes = 'LacZ,luciferase,EGFR'
+    drugz.half_window_size = 5
+
 }
 dag {
     enabled = true
