feat: bagel (resolves #3)

--- a/conf/test.config
+++ b/conf/test.config
@@ -5,6 +5,7 @@ params {
     input = 'assets/samplesheet_test.csv'
     library = 'assets/lib/yusa_library.csv'
     outdir = 'results/test'
+    exp_name = 'test'
 
     max_cpus = 32        // for GitHub Actions https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
     max_memory = '120.GB'
@@ -12,8 +13,15 @@ params {
 
     publish_dir_mode = 'symlink'
 
-    drugz.remove_genes = 'LacZ,luciferase,EGFR'
-    drugz.half_window_size = 5
+    mageck.run = false
+
+    drugz {
+        run = false
+        remove_genes = 'LacZ,luciferase,EGFR'
+        half_window_size = 5
+    }
+
+    bagel.test_columns = '1'
 
 }
 dag {
