--- a/nextflow.config
+++ b/nextflow.config
@@ -29,6 +29,9 @@ params {
     }
     bagel {
         run = true
+        core_essential_genes = '/opt2/bagel-2.0-115/CEGv2.txt' // in Docker container
+        non_essential_genes = '/opt2/bagel-2.0-115/NEGv1.txt' // in Docker container
+        test_columns = null
     }
 
 }
