--- a/nextflow.config
+++ b/nextflow.config
@@ -66,6 +66,9 @@ profiles {
     test {
         includeConfig "conf/test.config"
     }
+    test_mle {
+        includeConfig "conf/test_mle.config"
+    }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
