fix: set max cpus & enable report

--- a/conf/test_mle.config
+++ b/conf/test_mle.config
@@ -14,10 +14,8 @@ params {
     drugz.run = false
     bagel.run = false
 
+    max_cpus = 32
 }
 dag {
-    enabled = false
-}
-report {
     enabled = false
 }
