docs: run dag w/ all steps except mle

--- a/conf/test.config
+++ b/conf/test.config
@@ -13,10 +13,10 @@ params {
 
     publish_dir_mode = 'symlink'
 
-    mageck.run = false
+    mageck.run = true
 
     drugz {
-        run = false
+        run = true
         remove_genes = 'LacZ,luciferase,EGFR'
         half_window_size = 5
     }
