--- a/conf/containers.config
+++ b/conf/containers.config
@@ -7,5 +7,6 @@ params {
         drugz = 'nciccbr/cruise_drugz:0.1.0'
         fastqc = 'nciccbr/ccrgb_qctools:v4.0'
         mageck = 'quay.io/biocontainers/mageck:0.5.9.5--py39h1f90b4d_3'
+        vispr = 'quay.io/biocontainers/mageck-vispr:0.5.6--py_0'
     }
 }
