--- a/conf/biowulf.config
+++ b/conf/biowulf.config
@@ -25,15 +25,13 @@ executor {
 singularity {
     enabled = true
     autoMounts = true
-    cacheDir = "/data/$USER/.singularity"
+    cacheDir = "/data/CCBR_Pipeliner/SIFS"
     envWhitelist='https_proxy,http_proxy,ftp_proxy,DISPLAY,SLURM_JOBID,SINGULARITY_BINDPATH'
 }
 
 env {
-    SINGULARITY_CACHEDIR="/data/$USER/.singularity"
-    PYTHONNOUSERSITE = 1
+    SINGULARITY_CACHEDIR="/data/CCBR_Pipeliner/SIFS"
 }
-
 
 process {
             executor = 'slurm'
