--- a/conf/slurmint.config
+++ b/conf/slurmint.config
@@ -4,12 +4,18 @@ params {
     max_cpus = 32
     max_time = '72 h'
 }
-process {
-    scratch = '/lscratch/$SLURM_JOBID'
-}
+
 singularity {
     enabled = true
     autoMounts = true
-    cacheDir = "/data/$USER/.singularity"
+    cacheDir = "/data/CCBR_Pipeliner/SIFS"
     envWhitelist='https_proxy,http_proxy,ftp_proxy,DISPLAY,SLURM_JOBID,SINGULARITY_BINDPATH'
+}
+
+env {
+    SINGULARITY_CACHEDIR="/data/CCBR_Pipeliner/SIFS"
+}
+
+process {
+    scratch = '/lscratch/$SLURM_JOBID'
 }
