refactor!: update CLI from CHAMPAGNE

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,8 +57,11 @@ profiles {
     biowulf {
         includeConfig "conf/biowulf.config"
     }
-    slurmint {
-        includeConfig "conf/slurmint.config"
+    slurm {
+        includeConfig "conf/slurm.config"
+    }
+    interactive {
+        includeConfig "conf/interactive.config"
     }
     ci_stub {
         includeConfig "conf/ci_stub.config"
