docs: update navbar

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_description: >-
 # Repository
 repo_name: CCBR/CRUISE
 repo_url: https://github.com/CCBR/CRUISE
-edit_uri: https://github.com/CCBR/CRUISE/edit/main/docs/
+edit_uri: https://github.com/CCBR/CRUISE/edit/main/
 
 # Copyright
 copyright: Copyright &copy; 2023 CCR Collaborative Bioinformatics Resource
@@ -91,15 +91,11 @@ markdown_extensions:
 
 # Page Tree
 nav:
-  - Introduction: index.md
+  - Home: index.md
   - Usage:
-      - 1. Getting Started: user-guide/getting-started.md
-      - 2. Preparing Files: user-guide/preparing-files.md
-      - 3. Running the Pipeline: user-guide/run.md
-      - 4. Expected Output: user-guide/output.md
-      - 5. Running Test Data: user-guide/test-info.md
-      - Troubleshooting: user-guide/troubleshooting.md
-  - FAQ:
+      - Getting Started: getting-started.md
+  - Developer Guide:
       - How to contribute: contributing.md
-      - Contributors: contributors.md
+      - Release guide: release-guide.md
+  - Contributors: contributors.md
   - Changelog: changelog.md
