fix: paths to package data

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include src
 recursive-include bin
 recursive-include conf
+recursive-include assets
 recursive-include modules
 recursive-include submodules
 include CITATION.cff
