--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,8 +62,8 @@ Changelog = "https://github.com/CCBR/CRUISE/blob/main/docs/CHANGELOG.md"
 cruise = "."
 
 [tool.setuptools.package-data]
-"*" = ["CITATION.cff", "LICENSE", "VERSION", "main.nf", "nextflow.conf", "bin/", "conf/", "modules/*/*", "submodules/*/*"]
+"*" = ["CITATION.cff", "LICENSE", "VERSION", "main.nf", "nextflow.conf", "assets/*", "bin/*", "conf/*", "modules/*/*", "submodules/*/*"]
 
 [tool.setuptools.dynamic]
-version = {file = "src/VERSION"}
+version = {file = "VERSION"}
 readme = {file = "README.md"}
