fix: abs paths to test data on biowulf

--- a/conf/test.config
+++ b/conf/test.config
@@ -2,7 +2,7 @@ params {
     config_profile_name = 'Test dataset'
     config_profile_description = 'Minimal test dataset for pipeline functionality'
 
-    input = 'assets/samplesheet_test.csv'
+    input = 'assets/samplesheet_test_biowulf.csv'
     library = 'assets/lib/yusa_library.csv'
     outdir = 'results/test'
     exp_name = 'test'
