ci: update stub config to make sure cruise init works

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,6 @@ jobs:
           pip install .[dev,test]
       - name: Test stub run
         run: |
+          cd tests/
+          cruise init
           cruise run -profile ci_stub -stub
