--- a/conf/ci_stub.config
+++ b/conf/ci_stub.config
@@ -2,10 +2,10 @@ params {
     config_profile_name = 'Test single-end stubs'
     config_profile_description = 'Minimal test dataset with blank references to run stubs with continuous integration'
 
-    input = 'tests/assets/samplesheet.csv' // adapted from https://github.com/nf-core/test-datasets/blob/chipseq/samplesheet/v2.0/samplesheet_test.csv
+    input = 'assets/samplesheet.csv' // adapted from https://github.com/nf-core/test-datasets/blob/chipseq/samplesheet/v2.0/samplesheet_test.csv
     library = 'assets/lib/yusa_library.csv'
     outdir = 'results/test'
-    design_matrix = 'tests/data/designmat.txt'
+    design_matrix = 'data/designmat.txt'
 
     max_cpus = 2        // for GitHub Actions https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
     max_memory = '6.GB'
