--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ recursive-include bin
 recursive-include conf
 recursive-include assets
 recursive-include modules
-recursive-include submodules
+recursive-include subworkflows
 include CITATION.cff
 include LICENSE
 include VERSION
