--- a/conf/biowulf.config
+++ b/conf/biowulf.config
@@ -24,9 +24,8 @@ singularity {
     envWhitelist='https_proxy,http_proxy,ftp_proxy,DISPLAY,SLURM_JOBID,SINGULARITY_BINDPATH'
 }
 
-env {
-    SINGULARITY_CACHEDIR = "/data/CCBR_Pipeliner/SIFS"
-}
+env.SINGULARITY_CACHEDIR = "/data/CCBR_Pipeliner/SIFS"
+
 
 process.clusterOptions = ' --gres=lscratch:200 '
 process.scratch = '/lscratch/$SLURM_JOBID'
