--- a/nextflow.config
+++ b/nextflow.config
@@ -84,6 +84,8 @@ env {
     R_PROFILE_USER   = "/.Rprofile"
     R_ENVIRON_USER   = "/.Renviron"
     JULIA_DEPOT_PATH = "/usr/local/share/julia"
+    // prevent python from creating pycache files
+    PYTHONDONTWRITEBYTECODE = 'true'
 }
 
 // Capture exit codes from upstream processes when piping
