--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,15 @@ jobs:
           cd tests/
           cruise init
           cruise run -profile ci_stub -stub
+
+  build-status: # https://github.com/orgs/community/discussions/4324#discussioncomment-3477871
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: always()
+    steps:
+      - name: Successful build
+        if: ${{ !(contains(needs.*.result, 'failure')) }}
+        run: exit 0
+      - name: Failing build
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
