docs: add help message for citation flag

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "black >= 22.0.0",
-    "pre-commit",
-    "cffconvert"
+    "pre-commit"
 ]
 test = [
     "pytest"
