--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,7 @@ params {
     input = null
     library = null
     outdir = 'results'
-    exp_name = 'cruise'
+    exp_name = 'crispin'
 
     count_table   = null
     design_matrix = null
@@ -104,10 +104,10 @@ report {
 includeConfig 'conf/modules.config'
 
 manifest {
-    name = "CCBR/CRUISE"
+    name = "CCBR/CRISPIN"
     author = "CCR Collaborative Bioinformatics Resource"
-    homePage = "https://github.com/CCBR/CRUISE"
-    description = "Crispr scReen seqUencIng analySis pipEline"
+    homePage = "https://github.com/CCBR/CRISPIN"
+    description = "CRISPR screen pipeline"
     mainScript = "main.nf"
 }
 
