--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,7 +7,7 @@ body:
       value: |
         Before you post this issue, please check the documentation:
 
-        - [pipeline documentation: troubleshooting](https://ccbr.github.io/CRUISE/user-guide/troubleshooting/)
+        - [pipeline documentation: troubleshooting](https://ccbr.github.io/CRISPIN/user-guide/troubleshooting/)
 
   - type: textarea
     id: description
@@ -47,4 +47,4 @@ body:
         * Executor _(eg. slurm, local, awsbatch)_
         * Container engine: _(e.g. Docker, Singularity)_
         * OS _(eg. Ubuntu Linux, macOS)_
-        * Version of CCBR/CRUISE _(eg. 1.0, 1.8.2)_
+        * Version of CCBR/CRISPIN _(eg. 1.0, 1.8.2)_
