--- a/docker/bagel/meta.yml
+++ b/docker/bagel/meta.yml
@@ -1,4 +1,4 @@
 dockerhub_namespace: nciccbr
-image_name: cruise_bagel_2.0
+image_name: crispin_bagel_2.0
 version: 0.1.0
 container: "$(dockerhub_namespace)/$(image_name):$(version)"
