--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 # Project Information
-site_name: CRUISE
+site_name: CRISPIN
 site_author: CCR Collaborative Bioinformatics Resource
 site_description: >-
-  insert a one-line description of CRUISE here
+  insert a one-line description of CRISPIN here
 # Repository
-repo_name: CCBR/CRUISE
-repo_url: https://github.com/CCBR/CRUISE
-edit_uri: https://github.com/CCBR/CRUISE/edit/main/
+repo_name: CCBR/CRISPIN
+repo_url: https://github.com/CCBR/CRISPIN
+edit_uri: https://github.com/CCBR/CRISPIN/edit/main/
 
 # Copyright
 copyright: Copyright &copy; 2023 CCR Collaborative Bioinformatics Resource
