ci: add mike to docs reqs

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,3 +8,5 @@ mkdocs-git-revision-date-plugin==0.3.2
 mkdocs-material==9.1.6
 #https://pypi.org/project/mkdocs-material-extensions/
 mkdocs-material-extensions==1.1.1
+#https://github.com/jimporter/mike
+mike
