refactor: use ccbr_tools@v0.2.3 for CLI implementation (#58)
* refactor: use ccbr_tools@v0.2.3 for CLI implementation

* chore: update spooker usage

* ci: use python 3.11

--- a/nextflow.config
+++ b/nextflow.config
@@ -111,12 +111,16 @@ dag {
 
 includeConfig 'conf/modules.config'
 
+String pipeline_version = new File("${projectDir}/VERSION").text
+
 manifest {
     name = "CCBR/CRISPIN"
     author = "CCR Collaborative Bioinformatics Resource"
     homePage = "https://github.com/CCBR/CRISPIN"
     description = "CRISPR screen pipeline"
     mainScript = "main.nf"
+    defaultBranch = "main"
+    version = "${pipeline_version}"
 }
 
 // Function to ensure that resource requirements don't go beyond
