--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,14 @@ requires-python = ">=3.7"
 dependencies = [
     "pyyaml >= 6.0",
     "Click >= 8.1.3",
-    "cffconvert >= 2.0.0"
+    "ccbr_tools@git+https://github.com/CCBR/Tools@v0.2"
 ]
 
 [project.optional-dependencies]
 dev = [
     "black >= 22.0.0",
-    "pre-commit"
+    "pre-commit",
+    "nf-core >= 3.2.0"
 ]
 test = [
     "pytest"
