chore: update nextflow options: publish_dir_mode & process.cache (#59)
* chore: set publish_dir_mode=link and process.cache=deep

sync up with our other pipelines

* chore: update CHANGELOG.md

* chore: reorganize CHANGELOG.md

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,7 +10,7 @@ params {
     design_matrix = null
 
     enable_conda = false
-    publish_dir_mode = "copy"
+    publish_dir_mode = "link"
 
     cutadapt {
         adapters = '/opt2/TruSeq_and_nextera_adapters.consolidated.fa'  // this is in the cutadapt container
