--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -20,9 +20,8 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
-
       - uses: actions/checkout@v4
-        if: github.event_name == 'push'
+        if: github.event_name != 'pull_request'
         with:
           fetch-depth: 0
 
