fix: improve CLI help & set mode=slurm as default (#65)
* docs: improve CLI help & set mode=slurm as default

* chore: update CHANGELOG.md

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           cd tests/
           crispin init
-          crispin run -profile ci_stub -stub
+          crispin run -profile ci_stub -stub --mode local
 
   build-status: # https://github.com/orgs/community/discussions/4324#discussioncomment-3477871
     runs-on: ubuntu-latest
