feat: use nf-schema to validate params (#68)
* feat: use nf-schema to validate params

* ci: 📑 update params docs with 'nf-core pipelines schema docs'

* chore: update CHANGELOG.md

---------

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -1,12 +1,10 @@
-// containers accessed in process definitions with $params.containers.NAME
+// containers accessed in process definitions with $params.container_NAME
 params {
-    containers {
-        bagel = 'nciccbr/crispin_bagel_2.0:0.1.0'
-        base = 'nciccbr/ccbr_ubuntu_base_20.04:v5'
-        cutadapt = 'nciccbr/ncigb_cutadapt_v1.18:latest'
-        drugz = 'nciccbr/crispin_drugz:0.1.0'
-        fastqc = 'nciccbr/ccrgb_qctools:v4.0'
-        mageck = 'quay.io/biocontainers/mageck:0.5.9.5--py39h1f90b4d_3'
-        vispr = 'quay.io/biocontainers/mageck-vispr:0.5.6--py_0'
-    }
+    container_bagel = 'nciccbr/crispin_bagel_2.0:0.1.0'
+    container_base = 'nciccbr/ccbr_ubuntu_base_20.04:v5'
+    container_cutadapt = 'nciccbr/ncigb_cutadapt_v1.18:latest'
+    container_drugz = 'nciccbr/crispin_drugz:0.1.0'
+    container_fastqc = 'nciccbr/ccrgb_qctools:v4.0'
+    container_mageck = 'quay.io/biocontainers/mageck:0.5.9.5--py39h1f90b4d_3'
+    container_vispr = 'quay.io/biocontainers/mageck-vispr:0.5.6--py_0'
 }
