--- a/conf/test.config
+++ b/conf/test.config
@@ -9,15 +9,13 @@ params {
 
     publish_dir_mode = 'symlink'
 
-    mageck.run = true
+    mageck_run = true
 
-    drugz {
-        run = true
-        remove_genes = 'LacZ,luciferase,EGFR'
-        half_window_size = 5
-    }
+    drugz_run = true
+    drugz_remove_genes = 'LacZ,luciferase,EGFR'
+    drugz_half_window_size = 5
 
-    bagel.test_columns = '1'
+    bagel_test_columns = '1'
 
 }
 dag {
