--- a/conf/test_mle.config
+++ b/conf/test_mle.config
@@ -10,9 +10,9 @@ params {
     count_table   = '/data/CCBR_Pipeliner/testdata/CRISPIN/leukemia.new.csv'
     design_matrix = '/data/CCBR_Pipeliner/testdata/CRISPIN/designmat.txt'
 
-    mageck.run = true
-    drugz.run = false
-    bagel.run = false
+    mageck_run = true
+    drugz_run = false
+    bagel_run = false
 }
 dag {
     enabled = false
