--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ Changelog = "https://github.com/CCBR/CRISPIN/blob/main/docs/CHANGELOG.md"
 crispin = "."
 
 [tool.setuptools.package-data]
-"*" = ["CITATION.cff", "LICENSE", "VERSION", "main.nf", "nextflow.config", "assets/**", "assets/**", "bin/**", "conf/**", "modules/**", "subworkflows/**"]
+"*" = ["CITATION.cff", "LICENSE", "VERSION", "main.nf", "nextflow.config", "nextflow_schema.json", "assets/**", "assets/**", "bin/**", "conf/**", "modules/**", "subworkflows/**"]
 
 [tool.setuptools.dynamic]
 version = {file = "VERSION"}
