--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           pip install .[dev,test]
+      - name: lint nxf
+        if: always()
+        run: |
+          nf-core pipelines schema lint
       - name: Check CLI basics
         run: |
           which crispin
