--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,8 @@ default_stages: [pre-commit]
 exclude: |
   (?x)(
       ^assets/|
-      ^docs/.*.html
+      ^docs/.*.html|
+      ^nextflow_schema.json
    )
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
